[gd_scene load_steps=4 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Grid.gd" type="Script" id=2]
[ext_resource path="res://GraphNode.tscn" type="PackedScene" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Grid" type="GraphEdit" parent="."]
margin_left = 2.51508
margin_top = 36.7203
margin_right = 887.515
margin_bottom = 624.72
scroll_offset = Vector2( -40, -40 )
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 50.3018
margin_top = 6.53923
margin_right = 128.302
margin_bottom = 26.5392
text = "New Node"

[node name="GraphNode" parent="." instance=ExtResource( 3 )]
visible = false
slot/0/left_type = 1
slot/1/left_color = Color( 0.443137, 0.0745098, 0.0745098, 1 )
slot/2/left_enabled = true

[connection signal="connection_request" from="Grid" to="." method="_on_Grid_connection_request"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
